# tinkgo

./: BUILD.bazel  WORKSPACE  deps.bzl  tink_go_deps_init.bzl
go/aead/: BUILD.bazel
go/aead/subtle/: BUILD.bazel
go/core/cryptofmt/: BUILD.bazel
go/core/primitiveset/: BUILD.bazel
go/core/registry/: BUILD.bazel
go/daead/: BUILD.bazel
go/daead/subtle/: BUILD.bazel
go/hybrid/: BUILD.bazel
go/hybrid/subtle/: BUILD.bazel
go/insecurecleartextkeyset/: BUILD.bazel
go/integration/awskms/: BUILD.bazel
go/integration/gcpkms/: BUILD.bazel
go/integration/hcvault/: BUILD.bazel
go/internal/: BUILD.bazel
go/keyset/: BUILD.bazel
go/kwp/subtle/: BUILD.bazel
go/mac/: BUILD.bazel
go/mac/subtle/: BUILD.bazel
go/prf/: BUILD.bazel
go/prf/subtle/: BUILD.bazel
go/proto/aes_cmac_go_proto/: BUILD.bazel
go/proto/aes_cmac_prf_go_proto/: BUILD.bazel
go/proto/aes_ctr_go_proto/: BUILD.bazel
go/proto/aes_ctr_hmac_aead_go_proto/: BUILD.bazel
go/proto/aes_ctr_hmac_streaming_go_proto/: BUILD.bazel
go/proto/aes_gcm_go_proto/: BUILD.bazel
go/proto/aes_gcm_hkdf_streaming_go_proto/: BUILD.bazel
go/proto/aes_siv_go_proto/: BUILD.bazel
go/proto/chacha20_poly1305_go_proto/: BUILD.bazel
go/proto/common_go_proto/: BUILD.bazel
go/proto/ecdsa_go_proto/: BUILD.bazel
go/proto/ecies_aead_hkdf_go_proto/: BUILD.bazel
go/proto/ed25519_go_proto/: BUILD.bazel
go/proto/hkdf_prf_go_proto/: BUILD.bazel
go/proto/hmac_go_proto/: BUILD.bazel
go/proto/hmac_prf_go_proto/: BUILD.bazel
go/proto/kms_envelope_go_proto/: BUILD.bazel
go/proto/tink_go_proto/: BUILD.bazel
go/proto/xchacha20_poly1305_go_proto/: BUILD.bazel
go/signature/: BUILD.bazel
go/signature/subtle/: BUILD.bazel
go/streamingaead/: BUILD.bazel
go/streamingaead/subtle/: BUILD.bazel
go/streamingaead/subtle/noncebased/: BUILD.bazel
go/subtle/: BUILD.bazel
go/subtle/random/: BUILD.bazel
go/testkeyset/: BUILD.bazel
go/testutil/: BUILD.bazel
go/tink/: BUILD.bazel
hybrid/: hybrid_test.go
