load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hybrid",
    srcs = [
        "ecies_aead_hkdf_private_key_manager.go",
        "ecies_aead_hkdf_public_key_manager.go",
        "hybrid.go",
        "hybrid_decrypt_factory.go",
        "hybrid_encrypt_factory.go",
        "hybrid_key_templates.go",
        "register_ecies_aead_hkdf_dem_helper.go",
    ],
    importpath = "github.com/google/tink/go/hybrid",
    visibility = ["//visibility:public"],
    deps = [
        "//go/aead",
        "//go/core/cryptofmt",
        "//go/core/primitiveset",
        "//go/core/registry",
        "//go/hybrid/subtle",
        "//go/keyset",
        "//go/proto/aes_ctr_hmac_aead_go_proto",
        "//go/proto/aes_gcm_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/ecies_aead_hkdf_go_proto",
        "//go/proto/tink_go_proto",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "hybrid_test",
    srcs = [
        "ecies_aead_hkdf_hybrid_decrypt_test.go",
        "ecies_aead_hkdf_hybrid_encrypt_test.go",
        "hybrid_factory_test.go",
        "hybrid_key_templates_test.go",
        "hybrid_test.go",
        "register_ecies_aead_hkdf_dem_helper_test.go",
    ],
    embed = [":hybrid"],
    deps = [
        "//go/aead",
        "//go/hybrid/subtle",
        "//go/keyset",
        "//go/mac",
        "//go/proto/common_go_proto",
        "//go/proto/ecies_aead_hkdf_go_proto",
        "//go/proto/tink_go_proto",
        "//go/signature",
        "//go/subtle/random",
        "//go/testkeyset",
        "//go/testutil",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
