load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "insecurecleartextkeyset",
    srcs = ["insecurecleartextkeyset.go"],
    importpath = "github.com/google/tink/go/insecurecleartextkeyset",
    visibility = ["//visibility:public"],
    deps = [
        "//go/internal",
        "//go/keyset",
        "//go/proto/tink_go_proto",
    ],
)

go_test(
    name = "insecurecleartextkeyset_test",
    srcs = ["insecurecleartextkeyset_test.go"],
    embed = [":insecurecleartextkeyset"],
    deps = [
        "//go/keyset",
        "//go/proto/tink_go_proto",
        "//go/testutil",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
