load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mac",
    srcs = [
        "aes_cmac_key_manager.go",
        "hmac_key_manager.go",
        "mac.go",
        "mac_factory.go",
        "mac_key_templates.go",
    ],
    importpath = "github.com/google/tink/go/mac",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/cryptofmt",
        "//go/core/primitiveset",
        "//go/core/registry",
        "//go/keyset",
        "//go/mac/subtle",
        "//go/proto/aes_cmac_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hmac_go_proto",
        "//go/proto/tink_go_proto",
        "//go/subtle/random",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "mac_test",
    srcs = [
        "aes_cmac_key_manager_test.go",
        "hmac_key_manager_test.go",
        "mac_factory_test.go",
        "mac_key_templates_test.go",
        "mac_test.go",
    ],
    embed = [":mac"],
    deps = [
        "//go/core/cryptofmt",
        "//go/core/registry",
        "//go/keyset",
        "//go/mac/subtle",
        "//go/proto/aes_cmac_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hmac_go_proto",
        "//go/proto/tink_go_proto",
        "//go/signature",
        "//go/subtle",
        "//go/subtle/random",
        "//go/testkeyset",
        "//go/testutil",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
