load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aes_cmac_key_manager.go",
        "hmac_key_manager.go",
        "mac.go",
        "mac_factory.go",
        "mac_key_templates.go",
    ],
    importpath = "github.com/google/tink/go/mac",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/cryptofmt:go_default_library",
        "//go/core/primitiveset:go_default_library",
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac/subtle:go_default_library",
        "//go/proto/aes_cmac_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/hmac_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aes_cmac_key_manager_test.go",
        "hmac_key_manager_test.go",
        "mac_factory_test.go",
        "mac_key_templates_test.go",
        "mac_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/core/cryptofmt:go_default_library",
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac/subtle:go_default_library",
        "//go/proto/aes_cmac_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/hmac_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/signature:go_default_library",
        "//go/subtle:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/testkeyset:go_default_library",
        "//go/testutil:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
