load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prf",
    srcs = [
        "aes_cmac_prf_key_manager.go",
        "hkdf_prf_key_manager.go",
        "hmac_prf_key_manager.go",
        "prf_key_templates.go",
        "prf_set.go",
        "prf_set_factory.go",
    ],
    importpath = "github.com/google/tink/go/prf",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/primitiveset",
        "//go/core/registry",
        "//go/keyset",
        "//go/prf/subtle",
        "//go/proto/aes_cmac_prf_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hkdf_prf_go_proto",
        "//go/proto/hmac_prf_go_proto",
        "//go/proto/tink_go_proto",
        "//go/subtle/random",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "prf_test",
    srcs = [
        "aes_cmac_prf_key_manager_test.go",
        "hkdf_prf_key_manager_test.go",
        "hmac_prf_key_manager_test.go",
        "prf_key_templates_test.go",
        "prf_set_factory_test.go",
        "prf_test.go",
    ],
    embed = [":prf"],
    deps = [
        "//go/core/registry",
        "//go/keyset",
        "//go/mac",
        "//go/prf/subtle",
        "//go/proto/aes_cmac_prf_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hkdf_prf_go_proto",
        "//go/proto/hmac_prf_go_proto",
        "//go/proto/tink_go_proto",
        "//go/subtle/random",
        "//go/testutil",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
