load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ecdsa_signer_key_manager.go",
        "ecdsa_verifier_key_manager.go",
        "ed25519_signer_key_manager.go",
        "ed25519_verifier_key_manager.go",
        "proto.go",
        "signature.go",
        "signature_key_templates.go",
        "signer_factory.go",
        "verifier_factory.go",
    ],
    importpath = "github.com/google/tink/go/signature",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/cryptofmt:go_default_library",
        "//go/core/primitiveset:go_default_library",
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/ecdsa_go_proto:go_default_library",
        "//go/proto/ed25519_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/signature/subtle:go_default_library",
        "//go/subtle:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_x_crypto//ed25519:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ecdsa_signer_key_manager_test.go",
        "ecdsa_verifier_key_manager_test.go",
        "ed25519_signer_key_manager_test.go",
        "ed25519_verifier_key_manager_test.go",
        "signature_factory_test.go",
        "signature_key_templates_test.go",
        "signature_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/ecdsa_go_proto:go_default_library",
        "//go/proto/ed25519_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/signature/subtle:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/testkeyset:go_default_library",
        "//go/testutil:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
