load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "streamingaead",
    srcs = [
        "aes_ctr_hmac_key_manager.go",
        "aes_gcm_hkdf_key_manager.go",
        "decrypt_reader.go",
        "streamingaead.go",
        "streamingaead_factory.go",
        "streamingaead_key_templates.go",
    ],
    importpath = "github.com/google/tink/go/streamingaead",
    visibility = ["//visibility:public"],
    deps = [
        "//go/aead/subtle",
        "//go/core/primitiveset",
        "//go/core/registry",
        "//go/keyset",
        "//go/mac/subtle",
        "//go/proto/aes_ctr_hmac_streaming_go_proto",
        "//go/proto/aes_gcm_hkdf_streaming_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hmac_go_proto",
        "//go/proto/tink_go_proto",
        "//go/streamingaead/subtle",
        "//go/subtle/random",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "streamingaead_test",
    srcs = [
        "aes_ctr_hmac_key_manager_test.go",
        "aes_gcm_hkdf_key_manager_test.go",
        "streamingaead_factory_test.go",
        "streamingaead_key_templates_test.go",
        "streamingaead_test.go",
    ],
    embed = [":streamingaead"],
    deps = [
        "//go/core/registry",
        "//go/keyset",
        "//go/mac",
        "//go/proto/aes_ctr_hmac_streaming_go_proto",
        "//go/proto/aes_gcm_hkdf_streaming_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/tink_go_proto",
        "//go/streamingaead/subtle",
        "//go/subtle/random",
        "//go/testkeyset",
        "//go/testutil",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
