load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aes_ctr_hmac_key_manager.go",
        "aes_gcm_hkdf_key_manager.go",
        "decrypt_reader.go",
        "streamingaead.go",
        "streamingaead_factory.go",
        "streamingaead_key_templates.go",
    ],
    importpath = "github.com/google/tink/go/streamingaead",
    visibility = ["//visibility:public"],
    deps = [
        "//go/aead/subtle:go_default_library",
        "//go/core/primitiveset:go_default_library",
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac/subtle:go_default_library",
        "//go/proto/aes_ctr_hmac_streaming_go_proto:go_default_library",
        "//go/proto/aes_gcm_hkdf_streaming_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/hmac_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/streamingaead/subtle:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aes_ctr_hmac_key_manager_test.go",
        "aes_gcm_hkdf_key_manager_test.go",
        "streamingaead_factory_test.go",
        "streamingaead_key_templates_test.go",
        "streamingaead_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac:go_default_library",
        "//go/proto/aes_ctr_hmac_streaming_go_proto:go_default_library",
        "//go/proto/aes_gcm_hkdf_streaming_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/streamingaead/subtle:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/testkeyset:go_default_library",
        "//go/testutil:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
