load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "subtle",
    srcs = [
        "hkdf.go",
        "subtle.go",
    ],
    importpath = "github.com/google/tink/go/subtle",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//hkdf"],
)

go_test(
    name = "subtle_test",
    srcs = [
        "hkdf_test.go",
        "subtle_test.go",
    ],
    embed = [":subtle"],
    deps = ["//go/subtle/random"],
)
