load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constant.go",
        "testutil.go",
        "wycheproofutil.go",
    ],
    importpath = "github.com/google/tink/go/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/registry:go_default_library",
        "//go/daead/subtle:go_default_library",
        "//go/hybrid/subtle:go_default_library",
        "//go/keyset:go_default_library",
        "//go/mac:go_default_library",
        "//go/proto/aes_cmac_go_proto:go_default_library",
        "//go/proto/aes_cmac_prf_go_proto:go_default_library",
        "//go/proto/aes_ctr_hmac_streaming_go_proto:go_default_library",
        "//go/proto/aes_gcm_go_proto:go_default_library",
        "//go/proto/aes_gcm_hkdf_streaming_go_proto:go_default_library",
        "//go/proto/aes_siv_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/ecdsa_go_proto:go_default_library",
        "//go/proto/ecies_aead_hkdf_go_proto:go_default_library",
        "//go/proto/ed25519_go_proto:go_default_library",
        "//go/proto/hkdf_prf_go_proto:go_default_library",
        "//go/proto/hmac_go_proto:go_default_library",
        "//go/proto/hmac_prf_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/subtle:go_default_library",
        "//go/subtle/random:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_x_crypto//ed25519:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "testutil_test.go",
        "wycheproofutil_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/subtle/random:go_default_library",
        "//go/tink:go_default_library",
    ],
)
