load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cryptofmt",
    srcs = ["cryptofmt.go"],
    importpath = "github.com/google/tink/go/core/cryptofmt",
    visibility = ["//visibility:public"],
    deps = ["//go/proto/tink_go_proto"],
)

go_test(
    name = "cryptofmt_test",
    srcs = ["cryptofmt_test.go"],
    embed = [":cryptofmt"],
    deps = ["//go/proto/tink_go_proto"],
)
