load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "primitiveset",
    srcs = ["primitiveset.go"],
    importpath = "github.com/google/tink/go/core/primitiveset",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/cryptofmt",
        "//go/proto/tink_go_proto",
    ],
)

go_test(
    name = "primitiveset_test",
    srcs = ["primitiveset_test.go"],
    embed = [":primitiveset"],
    deps = [
        "//go/core/cryptofmt",
        "//go/proto/tink_go_proto",
        "//go/testutil",
    ],
)
