load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registry",
    srcs = [
        "key_manager.go",
        "kms_client.go",
        "private_key_manager.go",
        "registry.go",
    ],
    importpath = "github.com/google/tink/go/core/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//go/proto/tink_go_proto",
        "//go/tink",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "registry_test",
    srcs = ["registry_test.go"],
    embed = [":registry"],
    deps = [
        "//go/aead",
        "//go/mac",
        "//go/mac/subtle",
        "//go/proto/aes_gcm_go_proto",
        "//go/proto/common_go_proto",
        "//go/proto/hmac_go_proto",
        "//go/proto/tink_go_proto",
        "//go/testutil",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
