load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "key_manager.go",
        "kms_client.go",
        "private_key_manager.go",
        "registry.go",
    ],
    importpath = "github.com/google/tink/go/core/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//go/proto/tink_go_proto:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["registry_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/aead:go_default_library",
        "//go/mac:go_default_library",
        "//go/mac/subtle:go_default_library",
        "//go/proto/aes_gcm_go_proto:go_default_library",
        "//go/proto/common_go_proto:go_default_library",
        "//go/proto/hmac_go_proto:go_default_library",
        "//go/proto/tink_go_proto:go_default_library",
        "//go/testutil:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
