load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "subtle",
    srcs = [
        "ecies_aead_hkdf_dem_helper.go",
        "ecies_aead_hkdf_hybrid_decrypt.go",
        "ecies_aead_hkdf_hybrid_encrypt.go",
        "ecies_hkdf_recipient_kem.go",
        "ecies_hkdf_sender_kem.go",
        "elliptic_curves.go",
    ],
    importpath = "github.com/google/tink/go/hybrid/subtle",
    visibility = ["//visibility:public"],
    deps = [
        "//go/subtle",
        "//go/tink",
    ],
)

go_test(
    name = "subtle_test",
    srcs = ["elliptic_curves_test.go"],
    embed = [":subtle"],
)
