load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hcvault",
    srcs = [
        "hcvault_aead.go",
        "hcvault_client.go",
    ],
    importpath = "github.com/google/tink/go/integration/hcvault",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/registry",
        "//go/tink",
        "@com_github_hashicorp_vault_api//:api",
    ],
)

go_test(
    name = "hcvault_test",
    srcs = [
        "hcvault_aead_test.go",
        "hcvault_client_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":hcvault"],
    deps = [
        "//go/aead",
        "//go/core/registry",
        "//go/keyset",
    ],
)
