load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hcvault_aead.go",
        "hcvault_client.go",
    ],
    importpath = "github.com/google/tink/go/integration/hcvault",
    visibility = ["//visibility:public"],
    deps = [
        "//go/core/registry:go_default_library",
        "//go/tink:go_default_library",
        "@com_github_hashicorp_vault_api//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hcvault_aead_test.go",
        "hcvault_client_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/aead:go_default_library",
        "//go/core/registry:go_default_library",
        "//go/keyset:go_default_library",
    ],
)
