load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "subtle",
    srcs = ["kwp.go"],
    importpath = "github.com/google/tink/go/kwp/subtle",
    visibility = ["//visibility:public"],
)

go_test(
    name = "subtle_test",
    srcs = ["kwp_test.go"],
    embed = [":subtle"],
    deps = [
        "//go/subtle/random",
        "//go/testutil",
    ],
)
