load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kwp.go"],
    importpath = "github.com/google/tink/go/kwp/subtle",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["kwp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/subtle/random:go_default_library",
        "//go/testutil:go_default_library",
    ],
)
