load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cmac.go",
        "hmac.go",
    ],
    importpath = "github.com/google/tink/go/mac/subtle",
    visibility = ["//visibility:public"],
    deps = [
        "//go/prf/subtle:go_default_library",
        "//go/subtle:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cmac_test.go",
        "hmac_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//go/subtle/random:go_default_library"],
)
