load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ecdsa_go_proto",
    srcs = ["ecdsa.pb.go"],
    importpath = "github.com/google/tink/go/proto/ecdsa_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/proto/common_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
