load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ecdsa.pb.go"],
    importpath = "github.com/google/tink/go/proto/ecdsa_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/proto/common_go_proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
