load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hmac_go_proto",
    srcs = ["hmac.pb.go"],
    importpath = "github.com/google/tink/go/proto/hmac_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/proto/common_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
